# LVHVBox

./: .commands.py.swp  .gitignore  .lvhv_history  .lvhvbox.py.swp  LICENSE  MCP23S08.py  Makefile  README  README.md  ad5685.c  ben_notes.txt  client.py  commands.h  commands.py  compare_smartswitch.c  config.txt  control_hv.py  dac8164.py  gui2.py  gui_main.py  hvmon_serial.py  lvhvbox.py  lvhvboxtest.py  lvmon.py  mu2e_lvmon.hist  nominal-hv-dac-calibration.json  pistart.sh  python_connect.c  qc_station.py  qc_station2.py  rampdown.py  ramphv.py  rampup.py  server.py  servertest.py  sethv.c  sethv.py  store_hv.py  store_server.py  test_trip.py
AcquireSwitch/: store.c
CServer/: CMakeLists.txt  Currents_0.txt  MCP23S08.c  MCP23S08.h  MCP23S17.h  Server.c  Voltages_0.txt  dac8164.c  dac8164.h  gpio.c  gpio.h  i2cbusses.c  i2cbusses.h  live_status.txt  new_server.c  utils.c  utils.h
Client/: Client.py  Client_2.py  Connection.py  I2CSensorConnection.py  MessagingConnection.py  PiHealthConnection.py  PowerSupplyServerConnection.py  ThreadSafeDict.py  WireAnalogDigitalConversion.py  ben_client.py  com.py  full_currents_1673976301.txt  full_currents_1673976453.txt  full_currents_1673976787.txt  full_currents_1673977808.txt  full_currents_1673977821.txt  full_currents_1673977887.txt  full_currents_1702676922.txt  full_currents_1702677057.txt  full_currents_1705053308.txt  full_currents_1705053465.txt  full_currents_1705053583.txt  full_currents_1705053741.txt  full_currents_1705053976.txt  full_currents_1705054462.txt  full_currents_1705054513.txt  full_currents_1707083359.txt  full_currents_1707083599.txt  full_currents_1707083637.txt  full_currents_1707083694.txt  full_currents_1707084046.txt  full_currents_1707084160.txt  full_currents_1707084289.txt  graphite_pusher.py  gui.py  hv-monitor.py  long_currents.py  plot_currents.py  plot_fft.py  plot_multiple.py  (+4 more)
Control/: CMakeLists.txt  downhv.c  ramphv.c
FlashRead/: AcquireSwitch.c  CMakeLists.txt
LVHV Box Store (prior to SIP reflash)/: ad5685.h  lvmon.py  python_connect.c  rampup  rampup.c  rampup.c~  sethv  test
MultiCoreTests/: SmartSwitch.c  tusb_config.h
Pico_w_blink/: README.md
Pico_w_blink/example_1/: CMakeLists.txt  picow_blink.c
Pico_w_blink/example_2/: CMakeLists.txt  picow_blink.c  usb_descriptors.c
Pico_w_blink/example_3/: CMakeLists.txt  picow_blink.c  usb_descriptors.c
Pico_w_blink/example_4/: picow_blink.c  tusb_config.h  tusb_config_c.h  tusb_config_python.h  tusb_port.c  usb_descriptors.c
Pico_w_blink/example_5/: CMakeLists.txt  SmartSwitch.c  clock.pio  clock.pio.h
QC/: gui.py  multi.py  qc_station.py  test1.py
SmartSwitch/: .SmartSwitch.c.swp  CMakeLists.txt  README.md  SmartSwitch.c  SmartSwitch.c~  SmartSwitch_old.c  atomic_utils.h  channel.pio  channel.pio.h  channel_2.pio  channel_enable.pio  channel_enable.pio.h  clock.pio  clock.pio.h  combined.pio  combined.pio.h  csel.pio  daq.c  daq.h  init.c  init.h  msc_disk.c  new_switch.c  pico_sdk_import.cmake  pkg.sh  read_burst.py  read_current_burst.py  read_usb.py  read_usb_average.py  store_smartswitch01.c  trip_usb.py  tusb_config.h  usb_comm.c  usb_comm.h  usb_descriptors.c
SmartSwitch/deb/: control-template
Smartstore/: SmartSwitch.c  clock.pio  clock.pio.h  combined.pio  combined.pio.h  read_usb.py  test.py  usb_descriptors.c
Test/: CMakeLists.txt  SmartSwitch.c  test.c
Test2/: README.md
control_gui/: Makefile  Makefile0  SetPTest.c  dac8164.c  gui_main.py  gui_main.sh  main.c  python_connect  python_connect.c  rampup  rampup.c  screenless_test.py  sethv  sethv.c
control_gui/working_proto/: Makefile  README.txt  dac8164.h  gui_main.py  hvmon_serial.py  logfile.txt  python_connect  python_connect.c  python_lv.py  rampup  rampup.c  screenless_test.py  sethv  sethv.c  test.c
data_visualization/: plot.py
i2c-sensor-alerts/: README.md  i2c-sensor-alerts.env  i2c-sensor-alerts.py  pkg.sh
i2c-sensor-alerts/deb/: control-template  postinst
i2c-sensor-server/: README.md  i2c-sensor-server.py  i2c-sensor.env  pkg.sh
i2c-sensor-server/deb/: control-template  postinst
lv-server/: BinaryHeap.c  CMakeLists.txt  ConfigurationStore.c  HashTable.c  HashTable.h  Logging.c  Logging.h  MCP23S08.h  Messages.c  Messages.h  Pico.c  Pico.h  PriorityQueue.c  PriorityQueue.h  Task.c  Task.h  connections.c  connections.h  handler.c  handler.h  i2c_routines.c  i2c_routines.h  lv-server.c  pico_registry.h  pico_routines.c  pico_routines.h  utils.c  utils.h
lvhv-server/: BinaryHeap.c  BinaryHeap.h  CMakeLists.txt  Command.h  ConfigurationStore.c  ConfigurationStore.h  HashTable.c  Logging.c  Logging.h  MCP23S08.c~Stashed changes  Messages.c  Messages.h  Pico.h  PriorityQueue.h  Task.c  connections.c  dac8164.c  gpio.c  gpio.h  handler.c  handler.h  i2c_routines.c  i2c_routines.h  lvhv-server.c  pico_registry.c  pico_routines.c  pico_routines.h  pkg.sh  spi_routines.c  spi_routines.h  utils.c
lvhv-server/deb/: control-template  postinst
network-watch/: README.md  network-watch.env  network-watch.py  pkg.sh
network-watch/deb/: control-template  postinst
new_dac/: .sethv.c.swp  Makefile  dac8164.c  dac8164.h  rampup  rampup.c  rampup.c~  sethv  sethv.c  testset  testset.c
pi-health-server/: README.md  pi-health-actions.ini  pi-health-server.py  pkg.sh
pi-health-server/deb/: control-template  postinst
pico-bootsel/: Makefile  pkg.sh  reboot.c
pico-bootsel/deb/: control-template
picontrol/: dac8164.py  sethv.py
sam_trip/: plotStability.py  plotTripTestRed.py  python_connect  python_connect.c  python_trip.py  redHvAutoTripTest1.txt  redHvAutoTripTest2.txt
systemd/: graphite-pusher.service  i2c-sensor-alerts.service  i2c-sensor-server.service  lvhv-gui.desktop  lvhv-server.service  network-watch.service  pi-health-server.service
